docs/gyongyiras.css
body {
  font-size: 100%;
  --line-color: CornflowerBlue;
  --text-color: Black;
  --a5-width: 148mm;
  --a5-height: 210mm;
  --a4-width: 210mm;
  --a4-height: 297mm;
  --side-extra-margin: 1mm;
}

@page {
  margin: 0mm;
}

#print {
  display: flex;
  flex-direction: row;

  font-family: Gyongyiras_egyedul;
  font-size: var(--font-size);
  /* line-height: var(--font-size); */
  --top-accent-extra: calc(var(--font-size) / 3);
}

@media print {
  #screen {
    display: none;
  }

  #page1, #page2 {
    border-width: 0px;
  }
}

@media screen {
  #page1, #page2 {
    box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.4);
  }
}

#options {
  float: right;
  display: flex;
  flex-direction: column;
}

/* ------------ common page properties -------- */

#page1, #page2 {
  flex-shrink: 0;

  position: relative;
  overflow: hidden;
  width: var(--page-width);
  height: var(--page-height);
}

#page1 {
  margin-right: 2mm;
}

#page2 {
  margin-left: 2mm;
}

/* -------------------- osztaly1 -------------------- */

.osztaly1 {
  --font-size: 12mm;
  --background-line-char: ;
  --background-bottom-line-char:_;
  --top-margin: 30mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
}

.osztaly1 .pageA5 {
  --number-of-rows: 14;
  --number-of-columns: 20;
}

.osztaly1 .pageA4 {
  --number-of-rows: 21;
  --number-of-columns: 28;
}

.osztaly1 .pageA4-landscape {
  --number-of-rows: 14;
  --number-of-columns: 39;
}

/* -------------------- osztaly2 -------------------- */

.osztaly2 {
  --font-size: 10mm;
  --background-line-char: ;
  --background-bottom-line-char:_;
  --top-margin: 30mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
}

.osztaly2 .pageA5 {
  --number-of-rows: 16;
  --number-of-columns: 23;
}

.osztaly2 .pageA4 {
  --number-of-rows: 25;
  --number-of-columns: 33;
}

.osztaly2 .pageA4-landscape {
  --number-of-rows: 16;
  --number-of-columns: 46;
}

/* -------------------- osztaly3 -------------------- */

.osztaly3 {
  --font-size: 10mm;
  --background-line-char:~;
  --background-bottom-line-char:~;
  --top-margin: 23mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
  --top-border-width: 1mm;
  --top-border-style: double;
}

.osztaly3 .pageA5 {
  --number-of-rows: 17;
  --number-of-columns: 23;
}

.osztaly3 .pageA4 {
  --number-of-rows: 26;
  --number-of-columns: 33;
}

.osztaly3 .pageA4-landscape {
  --number-of-rows: 17;
  --number-of-columns: 46;
}

/* -------------------- osztaly4 -------------------- */

.osztaly4 {
  --font-size: 7mm;
  --background-line-char:~;
  --background-bottom-line-char:~;
  --top-margin: 23mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
  --top-border-width: 1mm;
  --top-border-style: double;
}

.osztaly4 .pageA5 {
  --number-of-rows: 24;
  --number-of-columns: 33;
}

.osztaly4 .pageA4 {
  --number-of-rows: 37;
  --number-of-columns: 47;
}

.osztaly4 .pageA4-landscape {
  --number-of-rows: 24;
  --number-of-columns: 66;
}

/* -------------------- szotar -------------------- */

.szotar {
  --font-size: 7mm;
  --background-line-char:~;
  --background-bottom-line-char:~;
  --top-margin: 12mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
  --margin-display: none;
  --dictionaryLine-display: block;
  --top-border-width: 1px;
  --top-border-style: solid;
}

.szotar .pageA5 {
  --number-of-rows: 26;
  --number-of-columns: 33;
}

.szotar .pageA4 {
  --number-of-rows: 39;
  --number-of-columns: 47;
}

.szotar .pageA4-landscape {
  --number-of-rows: 26;
  --number-of-columns: 66;
}

/* -------------------- GYL-1 -------------------- */

.gyl1 {
  --font-size: 23mm;
  --background-line-char: ;
  --background-bottom-line-char:_;
  --top-margin: 14mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
}

.gyl1 .pageA5 {
  --number-of-rows: 8;
  --number-of-columns: 11;
}

.gyl1 .pageA4 {
  --number-of-rows: 11;
  --number-of-columns: 15;
}

.gyl1 .pageA4-landscape {
  --number-of-rows: 8;
  --number-of-columns: 21;
}

/* -------------------- GYL-2 -------------------- */

.gyl2 {
  --font-size: 18mm;
  --background-line-char: ;
  --background-bottom-line-char:_;
  --top-margin: 15mm;
  --right-margin: 13mm;
  --left-margin: 12mm;
}

.gyl2 .pageA5 {
  --number-of-rows: 10;
  --number-of-columns: 14;
}

.gyl2 .pageA4 {
  --number-of-rows: 14;
  --number-of-columns: 19;
}

.gyl2 .pageA4-landscape {
  --number-of-rows: 10;
  --number-of-columns: 26;
}

/* -------------------- A5 -------------------- */

.pageA5 {
  --page-width: calc(var(--a5-width) - 4mm);
  --page-height: calc(var(--a5-height) - 6mm);
}

/* -------------------- A4 portrait -------------------- */

.pageA4 {
  --page-width: calc(var(--a4-width) - 4mm);
  --page-height: calc(var(--a4-height) - 6mm);
}

#page2.pageA4 {
  display: none;
}

/* -------------------- A4 landscape -------------------- */

.pageA4-landscape {
  --page-width: calc(var(--a4-height) - 4mm);
  --page-height: calc(var(--a4-width) - 6mm);
}

#page2.pageA4-landscape {
  display: none;
}

/* ------------------- page structure ------------------- */

.content {
  position: absolute;
  top: calc(var(--top-margin) - var(--top-accent-extra));
  left: var(--left-margin);
  width: calc(var(--page-width) - var(--left-margin) - var(--right-margin) - var(--side-extra-margin)*2 );
  height: calc(var(--page-height) - var(--top-margin));

  padding-top: var(--top-accent-extra);
  padding-left: var(--side-extra-margin);
  padding-right: var(--side-extra-margin);

  color: var(--text-color);
  white-space: pre;
  overflow: hidden;
}

.contentLeft {
  position: absolute;
  top: calc(var(--top-margin) - var(--top-accent-extra));
  left: var(--left-margin);
  width: calc((var(--page-width) - var(--left-margin) - var(--right-margin))/2 - var(--side-extra-margin)*2 );
  height: calc(var(--page-height) - var(--top-margin));

  padding-top: var(--top-accent-extra);
  padding-left: var(--side-extra-margin);
  padding-right: var(--side-extra-margin);

  color: var(--text-color);
  white-space: pre;
  overflow: hidden;
}

.contentRight {
  position: absolute;
  top: calc(var(--top-margin) - var(--top-accent-extra));
  right: var(--right-margin);
  width: calc((var(--page-width) - var(--left-margin) - var(--right-margin))/2 - var(--side-extra-margin)*2 - 1px );
  height: calc(var(--page-height) - var(--top-margin));

  padding-top: var(--top-accent-extra);
  padding-left: var(--side-extra-margin);
  padding-right: var(--side-extra-margin);

  color: var(--text-color);
  white-space: pre;
  overflow: hidden;
}

.contentLeft, .contentRight {
  z-index: -1;
}

.background {
  position: absolute;
  top: calc(var(--top-margin) - var(--top-accent-extra) - var(--top-border-width,0px));
  left: 0px;
  width: 100%;
  height: calc(var(--page-height) - var(--top-margin));

  padding-top: var(--top-accent-extra);

  border-top: var(--top-border-width,0px) var(--top-border-style,none) var(--line-color);

  font-family: Gyongyiras_egyedul_v;
  color: var(--line-color);
  white-space: pre;
  overflow: hidden;
}

.sideMargins {
  display: var(--margin-display,block);

  position: absolute;
  top: 0px;
  left: var(--left-margin);
  width: calc(var(--page-width) - var(--left-margin) - var(--right-margin) - 2px);
  height: var(--page-height);

  border-left: 1px solid var(--line-color);
  border-right: 1px solid var(--line-color);
}

.dictionaryLine {
  display: var(--dictionaryLine-display,none);

  position: absolute;
  top: 0px;
  left: var(--left-margin);
  width: calc((var(--page-width) - var(--left-margin) - var(--right-margin))/2);
  height: var(--page-height);

  border-right: 1px solid var(--line-color);
}

.background, .sideMargins, .dictionaryLine {
  z-index: -2;
}

/* -------------------- load fonts -------------------- */

@font-face {font-family: Gyongyiras_egyedul_v;src: url(Gyongyiras_egyedul_v.otf);}
@font-face {font-family: Gyongyiras_elol_v;src: url(Gyongyiras_elol_v.otf);}
@font-face {font-family: Gyongyiras_fent_vege_v;src: url(Gyongyiras_fent_vege_v.otf);}
@font-face {font-family: Gyongyiras_fent_v;src: url(Gyongyiras_fent_v.otf);}
@font-face {font-family: Gyongyiras_kozel_vege_v;src: url(Gyongyiras_kozel_vege_v.otf);}
@font-face {font-family: Gyongyiras_kozel_v;src: url(Gyongyiras_kozel_v.otf);}
@font-face {font-family: Gyongyiras_lent_vege_v;src: url(Gyongyiras_lent_vege_v.otf);}
@font-face {font-family: Gyongyiras_lent_v;src: url(Gyongyiras_lent_v.otf);}
@font-face {font-family: Gyongyiras_tavol_vege_v;src: url(Gyongyiras_tavol_vege_v.otf);}
@font-face {font-family: Gyongyiras_tavol_v;src: url(Gyongyiras_tavol_v.otf);}

@font-face {font-family: Gyongyiras_egyedul;src: url(Gyongyiras_egyedul.otf);}
@font-face {font-family: Gyongyiras_elol;src: url(Gyongyiras_elol.otf);}
@font-face {font-family: Gyongyiras_fent_vege;src: url(Gyongyiras_fent_vege.otf);}
@font-face {font-family: Gyongyiras_fent;src: url(Gyongyiras_fent.otf);}
@font-face {font-family: Gyongyiras_kozel_vege;src: url(Gyongyiras_kozel_vege.otf);}
@font-face {font-family: Gyongyiras_kozel;src: url(Gyongyiras_kozel.otf);}
@font-face {font-family: Gyongyiras_lent_vege;src: url(Gyongyiras_lent_vege.otf);}
@font-face {font-family: Gyongyiras_lent;src: url(Gyongyiras_lent.otf);}
@font-face {font-family: Gyongyiras_tavol_vege;src: url(Gyongyiras_tavol_vege.otf);}
@font-face {font-family: Gyongyiras_tavol;src: url(Gyongyiras_tavol.otf);}

.egy {font-family: Gyongyiras_egyedul;}
.e {font-family: Gyongyiras_elol;}
.fv {font-family: Gyongyiras_fent_vege;}
.f {font-family: Gyongyiras_fent;}
.kv {font-family: Gyongyiras_kozel_vege;}
.k {font-family: Gyongyiras_kozel;}
.lv {font-family: Gyongyiras_lent_vege;}
.l {font-family: Gyongyiras_lent;}
.t {font-family: Gyongyiras_tavol;}
.tv {font-family: Gyongyiras_tavol_vege;}

.ny {
  position: relative;
  top: calc(-1*var(--font-size)*0.1);
  font-family: Times New Roman, serif; 
  font-size: calc(var(--font-size)*0.5);
  line-height: var(--font-size);
}

/* -------------------- Tooltips -------------------- */
/* Based on: https://www.w3schools.com/howto/howto_css_tooltip.asp */

/* Tooltip container */
.tooltip {
  position: relative;
  display: inline-block;
}

/* Tooltip text */
.tooltip .tooltiptext {
  visibility: hidden;
  background-color: #444;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;

  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
  width: 160px;
  top: 150%;
  left: 70%;
  margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */

  opacity: 0;
  transition: opacity 1s;
}

.tooltip .tooltiptext-left {
  visibility: hidden;
  background-color: #444;
  color: #fff;
  text-align: center;
  padding: 5px 0;
  border-radius: 6px;

  /* Position the tooltip text - see examples below! */
  position: absolute;
  z-index: 1;
  width: 160px;
  top: -5px;
  left: -170px;

  opacity: 0;
  transition: opacity 1s;
}

/* Show the tooltip text when you mouse over the tooltip container */
.tooltip:hover .tooltiptext, .tooltip:hover .tooltiptext-left {
  visibility: visible;
  opacity: 0.95;
}

